--- a/data_to_SQLite_DB.ipynb
+++ b/data_to_SQLite_DB.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "# make a variable containing the file path (as a raw string) to your data.db file, below is an example\n",
-    "db = r'C:\\Users\\aregel\\Documents\\kaggel\\test.db'\n",
+    "db = r'C:\\Users\\...\\data.db'\n",
     "# the variable conn contains the connection to your database\n",
     "conn = sql.connect(db)"
    ]
