--- a/organize-data.ipynb
+++ b/organize-data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This notebook uses the March Madness dataset provided by Kaggel.com.  Pleas use kaggel.com to access that data. \n",
+    "# This notebook uses the March Madness dataset provided by Kaggel.com.  Pleas use kaggle.com to access that data. \n",
     "\n",
     "## *I put the flat data into a SQLite database on my local, for the notebook explaining that process please go to* https://github.com/mtchem/ETL-MarchMadness-data/blob/master/data_to_SQLite_DB.ipynb "
    ]
