fix: fixed naming issue in modify_dictdf function

--- a/organize-data.ipynb
+++ b/organize-data.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -122,13 +122,13 @@
     "                   'Lspread', 'L_dor', 'L_ddR']]\n",
     "        # renames columns of winner and loser dataframes \n",
     "        df_a = df_a.rename(columns = {'Wteam':'team', 'Wscore': 'score', 'Wfgm': 'fgm','Wfga': 'fga', \n",
-    "                                      'Wfgm3': 'fgm', 'Wfga3':'fga3', 'Wftm':'ftm', 'Wfta':'fta', \n",
+    "                                      'Wfgm3': 'fgm3', 'Wfga3':'fga3', 'Wftm':'ftm', 'Wfta':'fta', \n",
     "                                      'Wor':'or', 'Wdr':'dr', 'Wast':'ast','Wto':'to', 'Wstl':'stl', \n",
     "                                      'Wblk':'blk', 'Wpf':'pf', 'W%_freethrow':'%_freethrow',\n",
     "                                      'W%_field_goals':'%field_goal', 'W%_3pt':'%_3pt', \n",
     "                                      'Wspread':'spread', 'W_dor':'dor', 'W_ddR':'ddR' })\n",
     "        df_b = df_b.rename(columns = {'Lteam':'team', 'Lscore': 'score','Lfgm': 'fgm', 'Lfga': 'fga',\n",
-    "                                      'Lfgm3': 'fgm', 'Lfga3':'fga3','Lftm':'ftm', 'Lfta':'fta', \n",
+    "                                      'Lfgm3': 'fgm3', 'Lfga3':'fga3','Lftm':'ftm', 'Lfta':'fta', \n",
     "                                      'Lor':'or', 'Ldr':'dr', 'Last':'ast','Lto':'to','Lstl':'stl',\n",
     "                                      'Lblk':'blk','Lpf':'pf','L%_freethrow':'%_freethrow', \n",
     "                                      'L%_field_goals':'%field_goal', 'L%_3pt':'%_3pt', \n",
@@ -139,7 +139,7 @@
     "        add_outcome = outcome(df_comp)\n",
     "        # makes a new dictionary of dataframes \n",
     "        new_d[year] = add_outcome\n",
-    "    return new_d\n"
+    "    return new_d"
    ]
   },
   {
